{
    "name": "InputControls",
    "maps": [
        {
            "name": "Camera",
            "id": "62377cb8-902a-41b0-8c54-d5d3e3981d10",
            "actions": [
                {
                    "name": "PointerPositionDelta",
                    "type": "PassThrough",
                    "id": "380583cb-d230-45ec-b556-003c7f16ecfe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerScrollDelta",
                    "type": "PassThrough",
                    "id": "1c459fdf-866d-4143-9c5c-d6a26c2e8386",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerLeftDown",
                    "type": "Button",
                    "id": "f5dc0b83-730e-4560-bb44-611072bff8a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerMiddleDown",
                    "type": "Button",
                    "id": "33b8f8fc-ae4c-4811-a8a0-3fe81ae6a364",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerRightDown",
                    "type": "Button",
                    "id": "0f45aba1-8498-4800-bd20-c7b869f1cafc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0390a37f-6373-46ac-96c8-6aa1e7e6a657",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "PointerPositionDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3519baec-bbf4-47c6-b34e-a11195ca6c33",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "PointerScrollDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae5a4c41-daab-40a4-aed1-a55c188504c7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "PointerLeftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c705b29-2a60-44e1-9889-e626337cdd97",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "PointerMiddleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77c43183-b38d-48a9-9a98-e979a4b9eed6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "PointerRightDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}